# protected-attrib-prediction

./: .gitignore  LICENSE.md  README.MD  environment.yml  pyproject.toml
notebooks/: get_cxr_race_labels.ipynb
scripts/: clustering.py  generate_ebpe.py  generate_predictions.py  iptw.py  latent_space_opt.py  protected_attribute_classifier.py  statistical_analysis.py  train_classifier.py  train_cxr.sh  train_derm.sh  train_ebpe.py  train_signal_classifier_and_annotate.py
src/: legacy.py  utils.py
src/datasets/: cxrrace.py  dataset_map.py  engineered.py  isicbalanced.py  isicsex.py
src/models/: cnn.py  ebpe_wrappers.py  o2p.py  scanoma.py  sscd.py  vit.py
src/torch_utils/: misc.py  persistence.py
web_app_demo/: application.py
web_app_demo/static/css/: style.css
web_app_demo/static/js/: app.js  images.js
web_app_demo/templates/: app.html  index.html
